UNRELEASED  ts-klassen  <qrpc@su-shiki.com>

	* VERSION: 0.2.1
	q_vvx_worker now prepends additional_libraries and onnxruntime lib paths for GPU loading.
	q_vvx_worker config is optional and defaults when missing.


2025-12-28  ts-klassen  <qrpc@su-shiki.com>

	* VERSION: 0.2.0
	Added q_vvx_bench for scenario-based synthesize benchmarking.
	Added q_vvx_worker with dynamic speaker model loading and wake queue flow.
	Updated super_simple_tts job routing for per-speaker queues.
	Renamed super_simple_tts RPC to synthesize.
	Removed q_vvx_engine configuration and module.


2025-12-25  ts-klassen  <qrpc@su-shiki.com>

	* VERSION: 0.1.0
	Initial setup.