@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1"
 futures-util = "0.3"
 lapin = "2"
+libc = "0.2"
 rand = "0.8"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1", features = ["derive"] }
